# obs-amd-ama-plugin

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/workflows/: build-project.yaml
src/: ama-context.c  ama-context.h  ama-encoder.c  ama-encoder.h  ama-filter.c  ama-filter.h  ama-plugin-main.c  ama-scaler.c  ama-scaler.h  plugin-support.c.in  plugin-support.h
